@@ -1,3 +1,4 @@
+* created first draft code for a listener class
 * created method Config.addsection() to add and entire section to a configloader object
 * factory.py split into two files: factory.py and queues.py
 * APFQueue objects are started all of them from method APFQueuesManager::start(), instead of being started when created
